vlib/v/parser/tests/generic_fn_type_decl_err.vv
type Fn = fn (I) !(O, R)

fn main() {
}
